data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2126.wast
;; 7. **Missing `end` within Complex Loop**:    - **Test Description**: Implement a complex loop with conditional blocks where an `end` instruction is missed, thus looping infinitely.    - **Constraint**: Ensuring all the blocks inside the loop are correctly bracketed by `end` instructions.    - **Relation to Infinite Loops**: Missing `end` instructions keep the control flow trapped in a loop.

(assert_invalid
  (module
    (func $infinite_loop_with_missing_end
      (loop (result i32)
        (block (br_if 0 (i32.const 1)))
        ;; missing end for block
        (br 1)
      )
    )
  )
  "unexpected end of section or function"
)